--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--Google icons-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> <!--cdn-->
         <!-- MATERIALIZE CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> <!--cdn-->
+        <link rel="stylesheet" href="css/materialize.css"> <!--cdn-->
         <!-- CUSTOM CSS -->
         <link rel="stylesheet" href="css/custom.css">
 
@@ -552,11 +552,11 @@
     
 
 <!-- JQUERRY -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>"></script> <!--cdn-->
+        <script src="js/jquery-3.2.1.min.js"></script>"></script> <!--cdn-->
 
 
 <!-- MATERIALIZE JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> <!--cdn-->
+        <script src="js/materialize.js"></script> <!--cdn-->
 
 <!-- JAVASCRIPT -->
         <script>
