--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br"> <!--linguagem padrão-->
     <head>
         <meta charset= "utf-8"> <!--conf caracteres-->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--tamanho do disp-->
         <title> Tengu - Art Studio</title> <!--titulo-->
         <link rel="icon" href="img/icon.png"> <!--icone-->
